[tool.poetry]
name = "harrah"
version = "0.0.1"
description = "Order book modelling project"
authors = [
  "edazizovv",
]
license = "MIT"
readme = "README.md"
packages = [{include = "harrah"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"